# Sound-project

./: README.md  drive  pyproject.toml  run_app.bat  sound_level_monitor.py
