[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbse-result-analyzer"
version = "0.1.0"
description = "Production-ready CBSE Class 10 result extraction and benchmark analysis tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pdfplumber>=0.11.0",
  "pymupdf>=1.24.0",
  "pillow>=10.3.0",
  "pytesseract>=0.3.10",
  "opencv-python>=4.9.0.80",
  "python-docx>=1.1.0",
  "openpyxl>=3.1.2",
  "streamlit>=1.33.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
cbse-result-analyzer = "cbse_result_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
